2004-03-24  Jeffrey Stedfast  <fejj@ximian.com>

	* providers/imap4/camel-imap-engine.c (camel_imap_engine_literal):
	New convenience wrapper function.
	(engine_parse_status): Fixed to handle literal mailbox strings.

	* providers/imap4/camel-imap-command.c (camel_imap_command_newv):
	Changed how %L works - create the CamelIMAPLiteral for our caller
	instead of expecting them to create it for us. We can autodetect
	what type of object (stream vs data-wrapper) the literal is, so
	it's trivial to do.

2004-03-23  Jeffrey Stedfast  <fejj@ximian.com>

	* providers/imap/camel-imap-folder.c (imap_get_message): Reworked
	the else bit to fix a bug where if we had the BODY structure, we simply
	wouldn't try fetching the actual message.

2004-03-23  Not Zed  <NotZed@Ximian.com>

	* camel-exception.c (camel_exception_setv): use camel debug to add
	some debug here.

	* camel.c (camel_init): call camel_debug_init().

	* camel-debug.c (camel_debug_init, camel_debug): new util stuff
	for extended debug options.

	* providers/imap/camel-imap-folder.c (imap_get_message): if we're
	supposed to be online, check we are online before proceeding.
	Actually major restructure so we re-try the fetch a couple of
	times first before failing.  i.e. silent reconnect.  See #55381.

	* providers/imap/camel-imap-store.c (get_folder_info_online):
	connect lock around this.  was getting a race with mem corruption
	otherwise.

2004-03-22  Not Zed  <NotZed@Ximian.com>

	* camel-mime-utils.c (camel_header_newsgroups_decode)
	(camel_header_newsgroups_free): decode newsgroups header into a
	list of newsgroups.

	** See #55887.

	* providers/nntp/camel-nntp-summary.c (camel_nntp_summary_check):
	NOOP if we're offline.

	* providers/nntp/camel-nntp-store.c (nntp_connected): spit a
	warning if we try to do stuff whilst offline, rather than crash.

2004-03-19  Not Zed  <NotZed@Ximian.com>

	* camel-disco-store.c (disco_connect): ref the diary before